Update CI scripts