@@ -1,32 +1,30 @@
 #!/bin/bash
 
+exec &> >(tee -a ".ci/build.log")
+
 #------------------------------------------------------------------------
 # Utility methods
 
 fatal()
 {
-  echo "fatal: $1" 1>&2
+  echo "build.sh: fatal: $1" 1>&2
+  echo
+  echo "build.sh: dumping log: " 1>&2
+  echo
+  cat .ci/build.log
   exit 1
 }
 
 info()
 {
-  echo "info: $1" 1>&2
+  echo "build.sh: info: $1" 1>&2
 }
 
 #------------------------------------------------------------------------
 # Build the project
 #
 
-(cat <<EOF
-
-org.gradle.daemon=true
-org.gradle.configureondemand=true
-org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError
-EOF
-) >> gradle.properties
-
 info "Executing build"
 ./gradlew \
   -Dorg.gradle.internal.publish.checksums.insecure=true \
-  clean assemble ktlint test || fatal "could not build"
+  clean assemble ktlint test verifySemanticVersioning || fatal "could not build"
